[update] 更新UI样式，简化InfoView刷新逻辑。